examples/test/testpolicy14986.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14986
  namespace: namespace69
spec:
  podSelector:
    matchLabels:
      key27: value29
      key28: value48
      key4: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value28
          key7: value47
      podSelector:
        matchLabels:
          key33: value3
          key6: value34
